# shift-manager

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  db.py  main.py  models.py
backend/tests/: test_general_endpoints.py  test_shifts.py  test_timezone.py  test_workers.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.ts  menuAside.js  menuNavBar.js
frontend/src/assets/: index.css
frontend/src/components/: AsideMenuLayer.vue  FooterBar.vue  FormControl.vue  Sidebar.vue
frontend/src/components/ui/button/: Button.vue
frontend/src/composables/: useApiError.ts
frontend/src/layouts/: LayoutAuthenticated.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  timeApi.ts
frontend/src/stores/: darkMode.d.ts  darkMode.js  darkMode.ts  settingsStore.ts  shiftStore.ts  workerStore.ts
frontend/src/types/: errors.ts  index.ts
frontend/src/views/: DashboardView.vue  SettingsView.vue  ShiftsView.vue  WorkersView.vue
